installation/environment/example-1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    environment: dev
  name: hello-openshift
  namespace: example-1
spec:
  port:
    targetPort: input
  to:
    kind: Service
    name: hello-openshift
    weight: 100
